Release history for katriawm

next
  [Fixed]
  - Limit the minimum size of windows: They can no longer be so small
    that there is not enough room left for the decorations to be drawn.
    This fixes black artifacts on tiny windows.

  [Changed]
  - Theming: The "tinting" model has been removed. Instead, each window
    state (normal, selected, urgency flag set) now requires one
    individual image. This means that you can use the full RGB color
    range for each state.
  - The "modern" theme has been removed (or rather, not ported to the
    new theming system).

  [Added]
  - Window titles can now be centered horizontally, see "center_title"
    in config.h.
  - _MOTIF_WM_HINTS is now evaluated (partially). We check for the
    "undecorated" hint.

v16.05  2016-05-01
  [Fixed]
  - Fix more focus issues. When "no window" is to be focused, we now
    transfer focus to an invisible window instead of to the root window.
    Especially, some VTE terminals are no longer confused about having
    focus. Sometimes, they have drawn a solid cursor instead of a hollow
    one.

  [Added]
  - "default_layout" was added to config.h.
  - Support _NET_SUPPORTING_WM_CHECK.

v16.02  2016-02-01
  [Fixed]
  - Less flickering when changing workspaces on the same monitor.
  - Less flickering when mapping new windows.
  - Unhiding already visible clients is now a no-op. This fixes a bug
    when moving clients to other workspaces.
  - Floaters will be re-fit to their monitor when changing workspaces.
    We don't want floaters to float away too far ... :-)
  - Floating clients can resize themselves. This is considered a "fix"
    since there are some dialog windows which rely on this (e.g.
    Inkscape or Firefox/GTK+3).

  [Added]
  - EWMH fullscreen hint honoured when windows are being mapped (instead
    of only responding to ClientMessages asking for fullscreen mode
    *after* the window has been mapped).
  - ICCCM size hints (increments, aspect ratio, min/max size) are now